--- a/src/styles/accueil.css
+++ b/src/styles/accueil.css
@@ -18,17 +18,40 @@ h1,h2,h3,p{
         text-align: center;
         font-weight: 600;
         font-size: 4.5em;
-        width: 100%;
+        width: 90%;
 }
 .h2__conteneur{
         position: absolute;
-        top: 78%;
+        top: 75%;
         left: 50%;
         transform: translate(-50%, -50%);
         color: white;
         text-align: center;
         font-weight: 600;
         font-size: 2.8em;
-        width: 100%;
+        width: 80%;
+}
+@media screen and (max-width: 860px) {
+        .h1__conteneur{
+                position: absolute;
+                top: 20%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: white;
+                text-align: center;
+                font-weight: 600;
+                font-size: 2.3em;
+        }
+        .h2__conteneur{
+                position: absolute;
+                top: 32%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: white;
+                text-align: center;
+                font-weight: 600;
+                font-size: 1.5em;
+        }
+        
 }
 
