--- a/src/styles/accueil.css
+++ b/src/styles/accueil.css
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300&family=Nunito+Sans:opsz,wght@6..12,400;6..12,600&family=Raleway:wght@500&display=swap');
 
-h1,h2,h3,p{
+h1,h2,h3,h4,strong{
         font-family: 'Nunito Sans', sans-serif;
+        font-weight: 600;
 }
-
+p{
+        font-family: 'Nunito Sans', sans-serif;
+        font-weight: 400;
+}
+strong{
+        font-weight: 600;
+}
 .img__conteneur img{
         width: 100%;
         filter: brightness(0.3);       
@@ -42,6 +49,7 @@ h1,h2,h3,p{
                 font-weight: 600;
                 font-size: 2.3em;
         }
+
         .h2__conteneur{
                 position: absolute;
                 top: 32%;
@@ -51,7 +59,137 @@ h1,h2,h3,p{
                 text-align: center;
                 font-weight: 600;
                 font-size: 1.5em;
-        }
-        
+        }       
 }
-
+.apropos__conteneur{
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+        margin-bottom: 30px;
+}
+.apropos__conteneur__carte{
+        display: flex;
+        justify-content:space-around;
+        gap: 45px;
+        width: 75%;
+        border: 10px;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 1px 1px 8px 1px black;
+}
+.apropos__titre{
+        font-weight: 600;
+}
+.bare{
+        background-color: #0d6efd;
+        border:1px solid #0d6efd;
+        width: 500px;
+        margin-left: 0;
+        margin-top: -15px;
+}
+.apropos__paragraph{
+        width: 500px;
+}
+.img__dev{
+        width: 400px;
+        border-radius: 10px;
+        margin-top: 10px;
+}
+.competence{
+        margin-top: 5px;
+}
+.competence__porcentage__bloc{
+        margin-bottom: 10px;
+}
+.bar{
+        background-color: #EEE;
+        height: 20px;
+        border: 1px solid #EEE;
+        border-radius: 10px;
+        margin-top: 5px;
+}
+.bar div{
+        margin-top: -1px;
+        margin-left: -1px;
+}
+.html{
+        background-color:rgb(193, 34, 34);
+        height: 20px;
+        border: 1px solid rgb(193, 34, 34);
+        border-radius: 10px;
+        width: 90%;
+        margin-top: 5px; 
+}
+.css{
+        background-color:rgb(2, 167, 255);
+        height: 20px;
+        border: 1px solid rgb(2, 167, 255);
+        border-radius: 10px;
+        width: 80%;
+        margin-top: 5px;  
+}
+.js{
+        background-color:rgb(251, 255, 14);
+        height: 20px;
+        border: 1px solid rgb(251, 255, 14);
+        border-radius: 10px;
+        width: 70%;
+        margin-top: 5px; 
+}
+.php{
+        background-color:rgb(0, 194, 36);
+        height: 20px;
+        border: 1px solid rgb(0, 194, 36);
+        border-radius: 10px;
+        width: 60%;
+        margin-top: 5px; 
+}
+.react{
+        background-color:rgb(38, 71, 255);
+        height: 20px;
+        border: 1px solid rgb(38, 71, 255);
+        border-radius: 10px;
+        width: 50%;
+        margin-top: 5px; 
+}
+@media screen and (max-width: 860px) {
+        .apropos__conteneur {
+            align-items: center;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+    
+        .apropos__conteneur__carte {
+            width: 100%;
+            padding: 15px;
+        }
+    
+        .img__dev {
+            width: 100%;
+            max-width: 400px;
+        }
+    
+        .competence__porcentage {
+            width: 100%;
+        }
+    
+        .bare {
+            width: 100%;
+        }
+    
+        .apropos__paragraph, .bar {
+            width: 100%;
+        }
+    }
+    
+@media screen and (min-width: 861px) and (max-width: 1326px) {
+        .apropos__conteneur__carte {
+            width: 90%; 
+            padding: 15px;
+        }
+    
+        .img__dev {
+            max-width: 100%;
+        }
+    }
+    
