--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,8 +3,13 @@
 footer{
         background-color: #EEE;
         display: flex;
+        flex-wrap: wrap;
+}
+.colonne{
+        display: flex;
         justify-content: space-around;
         padding-bottom:20px ;
+        width: 100%;
 }
 .logoFoot{
         text-decoration: none;
@@ -75,25 +80,33 @@ footer{
         width: 20px;
 }
 
-/* Styles communs à toutes les tailles d'écran */
 footer {
         background-color: #EEE;
         display: flex;
         justify-content: space-around;
         padding-bottom: 20px;
-    }
+}
     
-    .logoFoot {
+.logoFoot {
         text-decoration: none;
         color: #000;
         font-size: 1.2em;
         font-weight: 600;
         margin-left: 20px;
-    }
-    
-    /* Media query pour les écrans de taille moyenne */
-    @media screen and (max-width: 768px) {
-        footer {
+}
+
+.copy{
+        background-color:#444;
+        color:#fff;
+        text-align: center;
+        width: 100%;
+}
+.copy p{
+        align-items: center;
+        margin-top: 10px;
+}
+@media screen and (max-width: 768px) {
+        .colonne {
             flex-direction: column;
             padding-left: 20px;
         }
@@ -112,8 +125,7 @@ footer {
         }
     }
     
-    /* Media query pour les écrans de petite taille */
-    @media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
         .div__liensUtilies,
         .div__realisations,
         .div__article {
