Beta du site presque fini, ajout du fontAwesome ainsi que la finalisation des autres pages

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -27,7 +27,7 @@ footer{
         gap: 10px;
 }
 .img__reseaux{
-        width: 30px;
+        font-size: 35px;
 }
 .colonne__2{
         margin-top: 31px;
