--- a/src/styles/service.css
+++ b/src/styles/service.css
@@ -27,7 +27,12 @@ p{
         width: 200px;
 }
 .img__service {
-        width: 60px;
+        font-size: 50px;
+        color:#0d6dfd ;
+        margin-bottom: 20px;
+}
+.img__service:hover{
+        color:#cde1f8; 
 }
 .carte__service{
         display: flex;
